Fix overflow

--- a/do-you-know-js/style.css
+++ b/do-you-know-js/style.css
@@ -4,7 +4,6 @@ html {
   padding: 0;
   box-sizing: border-box;
   background-color: transparent;
-  overflow: hidden;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
 }
